src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>BillCalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>18 Sep 2017, P Dixon - lookup to bill calculation record created if this bill was calculated as part of a manual request</description>
        <label>Bill Calculation</label>
        <referenceTo>BillCalculation__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillDate__c</fullName>
        <description>This is the Date that the Bill was generated on.</description>
        <label>Bill Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BilledAmount__c</fullName>
        <description>Sum of all Bill items - calculated in Heroku</description>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>linked to a contract</description>
        <label>Contract Group</label>
        <referenceTo>ContractGroup__c</referenceTo>
        <relationshipName>BillStatementCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Number</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the value that is stored against the customer autonumber (custref) may not need this as we will link with the id on the customer account.  Could be against a void property but would this still have a customer? These are only read/ write due to customer moves ...same for a few fields below</description>
        <label>Account Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>BillStatementCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HerokuPostgresId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>20 Sep 2017, P Dixon - external id for Heroku mastered objects</description>
        <externalId>true</externalId>
        <label>Heroku Postgres Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalDue__c</fullName>
        <description>Billed amount +/- payments/adjustments</description>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>